# 2025_20660177

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  files.html  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet3/release_dynamic/adder_dynamic/include/: adder.h
Worksheet4/: hello.cpp
Worksheet4/Calc/: CMakeLists.txt  calc.cpp
Worksheet5/: CMakeLists.txt  adder.h
Worksheet6/QtProject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet6/QtProject/Model/: ModelPart.h
Worksheet7/Exercise3/QtProject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  optiondialog.cpp  optiondialog.h
Worksheet7/Exercise3/QtProject/Model/: ModelPart.cpp  ModelPart.h
